care/force-app/main/default/objects/BUC_US_Survey_Task_Assignment__mdt/BUC_US_Survey_Task_Assignment__mdt.object-meta.xml
<CustomObject>
    <description>Holds the recordtype and assignee of the task that should be created from a BUC US Survey. SFORCE-2425</description>
    <label>BUC US Survey Task Assignment</label>
    <pluralLabel>BUC US Survey Task Assignments</pluralLabel>
</CustomObject>