care/force-app/main/default/objects/BUC_US_Survey_Task_Assignment__mdt/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <description>Name of the environment, where the IDs are from or related to.</description>
    <inlineHelpText>Add the Name of the environment, where the IDs are from or related to.</inlineHelpText>
    <label>Environment</label>
    <length>30</length>
    <type>Text</type>
</CustomField>