care/force-app/main/default/objects/BUC_US_Survey_Task_Assignment__mdt/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Holds the full name of the assignee</description>
    <inlineHelpText>Full name of the assignee</inlineHelpText>
    <label>Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>