care/force-app/main/default/objects/BUC_US_Survey_Task_Assignment__mdt/fields/Task_assignee_ID__c.field-meta.xml
<CustomField>
    <fullName>Task_assignee_ID__c</fullName>
    <description>Holds the User ID of the assignee. SFORCE-2425</description>
    <inlineHelpText>add the user id of the assignee</inlineHelpText>
    <label>Task assignee ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>