care/force-app/main/default/objects/BUC_US_Survey_Task_Assignment__mdt/fields/Task_record_type__c.field-meta.xml
<CustomField>
    <fullName>Task_record_type__c</fullName>
    <description>Holds the record type ID of the Task that should be created.</description>
    <inlineHelpText>add the record type ID of the task to be created</inlineHelpText>
    <label>Task record type</label>
    <length>18</length>
    <type>Text</type>
</CustomField>